// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonLink > should render a ButtonLink with custom styles > expected html 1`] = `
<div>
  <a
    class="inline-flex items-center justify-center border align-middle font-sans no-underline outline-offset-4 md:px-[15px] px-[12px] py-2.5 bg-blue-primary hover:bg-deep-blue-focus active:bg-blue-pressed rounded focus:ring focus:ring-offset-4 focus:ring-bg-deep-blue-focus text-red-500"
    data-discover="true"
    data-gc-analytics-customclick="mscaPlaceholder"
    href="/fr/lettres"
  >
    Test ButtonLink
  </a>
</div>
`;

exports[`ButtonLink > should render a ButtonLink with default styles > expected html 1`] = `
<div>
  <a
    class="inline-flex items-center justify-center rounded-sm border align-middle font-sans no-underline outline-offset-4 md:px-[15px] px-[15px] py-2.5 border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300"
    data-discover="true"
    data-gc-analytics-customclick="mscaPlaceholder"
    href="/fr/lettres"
  >
    Test ButtonLink
  </a>
</div>
`;

exports[`ButtonLink > should render a disabled ButtonLink correctly > expected html 1`] = `
<div>
  <a
    aria-disabled="true"
    class="inline-flex items-center justify-center border align-middle font-sans no-underline outline-offset-4 md:px-[15px] px-[15px] py-2.5 border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 pointer-events-none cursor-not-allowed opacity-70 rounded-full"
    data-gc-analytics-customclick="mscaPlaceholder"
    role="link"
  >
    Test ButtonLink
  </a>
</div>
`;

exports[`ButtonLink > should render a pill ButtonLink correctly > expected html 1`] = `
<div>
  <a
    class="inline-flex items-center justify-center border align-middle font-sans no-underline outline-offset-4 md:px-[15px] px-[15px] py-2.5 border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 rounded-full"
    data-discover="true"
    data-gc-analytics-customclick="mscaPlaceholder"
    href="/fr/lettres"
  >
    Test ButtonLink
  </a>
</div>
`;
